Delete unnecessary files

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,17 @@
   <title>Web App From Scratch - Minor Web Development - CMD Amsterdam</title>
 </head>
 <body>
-  <h1>Index</h1>
+  <header>
+    <h1>Hearthstone explorer</h1>
+  </header>
+  <main id="explorer">
+    <!-- <%for(var index in this.basic)  {%>
+      <label src="<%this.basic[index]%>"></label>
+    <%}%> -->
 
-  <script src="js/app.js"></script>
+
+  </main>
+
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
