--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <link rel="stylesheet" href="css/styles.css">
-  <title>Web App From Scratch - Minor Web Development - CMD Amsterdam</title>
+  <title>Hearthstone library</title>
 </head>
 <body>
   <header>
-    <h1>Hearthstone explorer</h1>
+    <h1>Hearthstone library</h1>
   </header>
   <main id="explorer">
-    <!-- <%for(var index in this.basic)  {%>
-      <label src="<%this.basic[index]%>"></label>
-    <%}%> -->
-
 
   </main>
 
+  <script src="./js/vendor/routie.js"></script>
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
