--- a/index.html
+++ b/index.html
@@ -6,17 +6,132 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <link rel="stylesheet" href="css/styles.css">
-  <title>Hearthstone library</title>
+  <!-- Template engine -->
+
+  <title>Hearthstone explorer</title>
 </head>
 <body>
-  <header>
-    <h1>Hearthstone library</h1>
-  </header>
-  <main id="explorer">
+  <div class="wrapper">
+    <header>
+      <h1>Hearthstone explorer</h1>
+    </header>
 
-  </main>
+    <!-- container to append template -->
+    <div class="collection-overview"></div>
+  </div>
 
+  <script type="text/template" id="collectionTemplate">
+    {{#Set}}
+
+      {{#Druid}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Druid}}
+
+      {{#Hunter}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Hunter}}
+
+
+      {{#Mage}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Mage}}
+
+      {{#Paladin}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Paladin}}
+
+      {{#Priest}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Priest}}
+
+      {{#Rogue}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Rogue}}
+
+      {{#Paladin}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Paladin}}
+
+      {{#Shaman}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Shaman}}
+
+      {{#Warlock}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Warlock}}
+
+      {{#Warrior}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Warrior}}
+
+      {{#Neutral}}
+        <article class="collection-overview__card">
+          <h2 class="collection-overview__card__class-name">{{ClassName}}</h2>
+          {{#Collection}}
+            <img class="collection-overview__card__img" src="{{img}}" alt="{{name}}" onerror="this.src='./images/hs-fallback.png'">
+          {{/Collection}}
+        </article>
+      {{/Neutral}}
+
+    {{/Set}}
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
+
+  <!-- Simple router -->
   <script src="./js/vendor/routie.js"></script>
+
+  <!-- App init -->
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
