Add details page

--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
-      <h1>Hearthstone <span>Evergreen</span></h1>
-    </header>
-
-    
     <section class="collection-overview">
       <!-- content is rendered through JS -->
     </section>
 
-    <section class="details-overview is-hidden">
+    <section class="details-overview">
       <!-- content is rendered through JS -->
   </section>
   </div>
