Add loading animation

--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
 </head>
 <body>
   <div class="wrapper">
+    <div id="loader" class="loader is-hidden">
+      <!-- https://dribbble.com/shots/5289768-Hearthstone-Loader-Animation -->
+      <img src="./images/loading.gif">
+    </div>
+
     <section class="collection-overview">
+      <header>
+        <h1>Hearthstone <span>Evergreen</span></h1>
+      </header>
       <!-- content is rendered through JS -->
     </section>
 
     <section class="details-overview">
       <!-- content is rendered through JS -->
-  </section>
+    </section>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
